--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moad.net - Personal Website</title>
+    <title>Moad.net</title>
     <style>
         /* Basic CSS for styling */
         body {
@@ -75,7 +75,8 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
+      <a href="#home">Home</a>
+      <a href="#projects">Projects</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
     </nav>
